@@ -585,6 +585,7 @@ function couponpopupWindow(url) {
 			
           	//"Stock by Attributes" add custom ID to display
 			$customid = null;
+			$attributes = null;
 			//test if this is to be displayed
 			if( STOCK_SBA_DISPLAY_CUSTOMID == 'true'){
 				//create array for use in zen_get_customid
